infrastructure/apps/enrollment-service/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: enrollment-service
  namespace: mrun-apps
  annotations:
    consul.hashicorp.com/service-name: enrollment-service
    consul.hashicorp.com/service-port: "8001"

spec:
  selector:
    app.kubernetes.io/name: enrollment-service
  ports:
    - name: http
      port: 8001
      targetPort: 8001
  type: ClusterIP
